--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,125 +5,117 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@drawable/door">
+    android:background="@drawable/door"
+    tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/vhod"
+        android:id="@+id/tv_enter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="24dp"
         android:text="@string/entrance"
         android:textColor="@color/white"
-        android:textStyle="bold"
         android:textSize="24sp"
-        android:layout_margin="24dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/welcome"
+        android:id="@+id/tv_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="245dp"
         android:text="@string/welcomee"
         android:textColor="@color/white"
-        android:textStyle="bold"
         android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@+id/vhod"
-        android:layout_marginTop="245dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_enter" />
 
     <TextView
-        android:id="@+id/op"
+        android:id="@+id/tv_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/zareg"
-        android:textColor="@color/white"
-        android:textStyle="normal"
-        android:textSize="22sp"
-        android:textAlignment="center"
         android:layout_margin="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/welcome"
+        android:text="@string/zareg"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />
+
+    <EditText
+        android:id="@+id/et_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/bg_btn_white"
+        android:hint="@string/pochta"
+        android:padding="15dp"
+        android:paddingStart="20dp"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_description" />
+
+    <EditText
+        android:id="@+id/et_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bg_btn_white"
+        android:hint="@string/parol"
+        android:padding="15dp"
+        android:paddingStart="20dp"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_email" />
+
+    <Button
+        android:id="@+id/btn_signIn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bg_btn_gray"
+        android:padding="15dp"
+        android:text="@string/voiti"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_password" />
+
+    <TextView
+        android:id="@+id/tv_forgotPassword"
+        android:layout_width="360dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="20dp"
+        android:paddingLeft="40dp"
+        android:text="@string/zabyl"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/edd1"
-        android:layout_width="360dp"
-        android:layout_height="55dp"
-        android:background="@drawable/ed1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:hint="@string/pochta"
-        app:layout_constraintTop_toBottomOf="@+id/op"
-        android:layout_marginTop="50dp"
-        android:textSize="20sp"
-        android:paddingLeft="20dp"
-        />
-
-    <EditText
-        android:id="@+id/edd2"
-        android:layout_width="360dp"
-        android:layout_height="55dp"
-        android:background="@drawable/ed2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:hint="@string/parol"
-        app:layout_constraintTop_toBottomOf="@+id/edd1"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
-        android:paddingLeft="20dp"/>
-
-    <Button
-        android:id="@+id/edd3"
-        android:layout_width="360dp"
-        android:layout_height="55dp"
-        app:layout_constraintTop_toBottomOf="@+id/edd2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:text="@string/voiti"
-        android:textSize="20sp"
-        android:textColor="@color/white"
-        android:background="@drawable/ed3"
-        />
-
-
     <TextView
-        android:id="@+id/zp"
+        android:id="@+id/tv_tapHere"
         android:layout_width="360dp"
         android:layout_height="55dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/zabyl"
-        android:textSize="20sp"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingLeft="40dp"/>
-    <TextView
-        android:id="@+id/z6"
-        android:layout_width="360dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/zhmi"
-        android:textSize="20sp"
-        android:textColor="#CF800A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="330dp"
-        android:paddingLeft="40dp"/>
-
-
-
-
-
-
-
-
-
-
-
+        android:layout_marginTop="20dp"
+        android:paddingLeft="40dp"
+        android:text="@string/zhmi"
+        android:textColor="#CF800A"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
